# homie

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
config/: rewards.example.toml
src/: actions.rs  config.rs  discord.rs  error.rs  lib.rs  main.rs  obs.rs  push_server.rs  title_prompt.rs  tui.rs
src/maison/: ac.rs  feeder.rs  lamps.rs  mod.rs
src/twitch/: auth.rs  chat.rs  eventsub.rs  mod.rs
src/yt_queue/: download.rs  macos.rs  mod.rs
tests/: config.rs  maison_client.rs  rewards_dispatch.rs
