[package]
name = "homie"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Twitch bot bridging channel point redemptions and chat commands to the Maison home API"
publish = false

[dependencies]
twitch_api = { version = "0.7.2", features = ["helix", "eventsub", "reqwest", "hmac", "client"] }
twitch_oauth2 = { version = "0.15.1", features = ["reqwest"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "process"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
thiserror = "2.0.18"
futures-util = "0.3.32"
url = "2.5.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
dotenvy = "0.15.7"
rodio = { version = "0.22.2", default-features = false, features = ["playback", "symphonia-mp3", "symphonia-aac", "symphonia-isomp4", "symphonia-vorbis", "symphonia-ogg", "symphonia-flac", "symphonia-wav"] }
cpal = "0.17.1"
# Upstream yt-dlp 2.7.2 on crates.io transitively pins lofty 0.23.x, which has
# been entirely yanked. The Guilherme-j10 fork carries the lofty bump on its
# `develop` branch. Drop this git override the day a fixed version lands on
# crates.io.
yt-dlp = { git = "https://github.com/Guilherme-j10/yt-dlp", branch = "develop" }
obws = { version = "0.15.0", default-features = false }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }

[dev-dependencies]
wiremock = "0.6.5"
tokio = { version = "1.52.1", features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3.23.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
